fixed negative costs, wrapped text elements

--- a/client/sharecost.css
+++ b/client/sharecost.css
@@ -72,10 +72,16 @@
 	padding: 10px;
 	margin-bottom: 10px;
 	position: relative;
+    padding-right: 75px;
 }
 .purchase-page .proposal-form {
 	margin-top: 32px;
 }
+
+.wrapper {
+    word-wrap: break-word;
+}
+
 .cost-input {
 	width: 30%;
 }
